--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,7 +19,7 @@ a {
 
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url(top.png);
+  background-image: url(http://u.cubeupload.com/yuzu18111/qZz0YG.png);
   background-size: cover;
   color: white;
   text-align: center;
