--- a/stylesheet.css
+++ b/stylesheet.css
@@ -94,6 +94,15 @@ header {
   margin-right: -25px;
 }
 
+.header-left a {
+    line-height: 65px;
+    padding: 0 25px;
+    color: white;
+    display: block;
+    float: left;
+    transition: all 0.5s;
+  }
+
 .header-right {
   float: right;
   margin-right: -25px;
