--- a/index_stylesheet.css
+++ b/index_stylesheet.css
@@ -98,7 +98,14 @@ input, textarea {
     font-size: 45px;
 }
 
+.span-big-url {
+    text-decoration: none;
+    color: rgb(255, 81, 0);
+}
 
+.span-big-url:active {
+    color: rgb(255, 81, 0);
+}
 
 .footer {
     background-color: #2f5167;
